# macro-oil-terminal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOY.md  Dockerfile  PROGRESS.md  README.md  SECURITY.md  ai_insights.py  alerts.py  app.py  cointegration.py  crack_spread.py  data_ingestion.py  language.py  observability.py  pyproject.toml  quantitative_models.py  requirements.txt  streamlit-teardown.PR_BODY.md  streamlit-teardown.bundle  test_runner.py  theme.py  thesis_context.py  trade_thesis.py  vol_models.py  webgpu_components.py
.agent-scripts/: app_id.txt  audit_endpoints.sh  audit_summary.py  capture_before_after.py  capture_live.py  capture_live_text.py  capture_screens.py  check_lh_progress.sh  cleanup_extra_plans.sh  commit_msg.txt  create_alerts.sh  create_sp_oidc.sh  diag_fleet_mobile_bg.sh  diagnose_swa_error.py  federated_cred.json  federated_cred_env.json  federated_cred_pr.json  foundry_retry.sh  live_thesis_dual.py  live_thesis_test.py  measure_tti.py  perf_baseline.py  perf_summary.py  poll_cd_3630f09.sh  probe_data.sh  probe_eia.sh  probe_eia_parse.py  probe_fred.sh  probe_o4_mini.py  run_lighthouse_v5.sh  show_lh_scores.py  show_lh_scores.sh  smoke_backend.py  subscription_id.txt  summarize_diag.py  tenant_id.txt  test_foundry_thesis.sh  try_regions.sh  verify_react_cutover.py  visual_audit.py  (+7 more)
.github/: CODEOWNERS  dependabot.yml
.streamlit/: config.toml  secrets.toml.example
auth/: __init__.py  config.py  session.py  user.py  widgets.py
backend/: __init__.py  main.py  pyproject.toml  requirements.txt  (+1 more)
(+416 files in other folders)
